--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+div{
+    color:white;
+    background-color: purple;
+    width: 200px;
+    padding: 10px;
+    font-size: 20px;
+/* 	border: red: */
+	border-left-style:solid;
+    border-left-width: 5px ;
+    border-left-color: green;
+	
+
+}
