--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@ div{
     width: 200px;
     padding: 10px;
     font-size: 20px;
-/* 	border: red: */
+/* 	border: red: 
 	border-left-style:solid;
     border-left-width: 5px ;
-    border-left-color: green;
+    border-left-color: green;*/
+	border-left:5px green solid;
 	
 
 }
