--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,10 @@
-
-/* Your CSS Code here. */
-.container{
-    color:rgb(255, 255, 255);
-    background-color: rgb(128, 0, 128);
+.main{
+    border-left: 5px solid green;
+    background-color: purple;
     width: 200px;
     padding: 10px;
-    font-size: 20px;
-	border-left-style:solid;
-    border-left-width: 5px ;
-    border-left-color: rgb(0, 128, 0);
-/*	border-left:5px green solid;*/
-	
-
+    color: white;
+}
+#heading{
+	font-size: 20px;
 }
